# cgal-cpp-feedstock

./: .appveyor.yml  .gitignore  .recipe_maintainers.json  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_boost_cpp1.72.0.yaml  linux_64_boost_cpp1.74.0.yaml  linux_aarch64_.yaml  linux_boost_version1.68.0.yaml  linux_boost_version1.69.0.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_64_boost_cpp1.72.0.yaml  osx_64_boost_cpp1.74.0.yaml  osx_arm64_.yaml  osx_boost_version1.68.0.yaml  osx_boost_version1.69.0.yaml  win_.yaml  win_64_.yaml  win_64_boost_cpp1.72.0.yaml  win_64_boost_cpp1.74.0.yaml  win_boost_version1.68.0c_compilervs2015cxx_compilervs2015vc14.yaml  win_boost_version1.69.0c_compilervs2015cxx_compilervs2015vc14.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
recipe/test/: CMakeLists.txt  test.cpp
